src/cka1.32/06_pod_priorityclass.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-logger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox-logger
  
  template:
    metadata:
      labels:
        app: busybox-logger
    spec:
      containers:
        - name: busybox
          image: busybox
          args:
            - /bin/sh
            - -c
            - >
              i=0;
              while true; do
                echo "[$(date)] Hello from busybox-logger #$i";
                i=$((i+1));
                sleep 5;
              done
      priorityClassName: high-priority
